--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>minechan</title>
+        <title>まいん</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p>こんにちはーーーーーーーー</p>
+        <p>福井県生まれ、京都府在住、なにもできません。</p>
+	<a href="https://github.com/minechan">GitHub</a>
     </body>
 </html>
