アイコン追加した

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <img id="profilepic" src="images/icon.jpg" width="128px">
         <p>福井県生まれ、京都府在住、なにもできません。</p>
-	<a href="https://github.com/minechan">GitHub</a>
+        <a href="https://github.com/minechan">GitHub</a>
+        
+        <script src="main.js"></script>
     </body>
 </html>
