--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <img id="profilepic" src="images/icon.jpg" width="128px">
+        <img id="profilepic" src="images/icon.jpg">
         <p>福井県生まれ、京都府在住、なにもできません。</p>
         <a href="https://github.com/minechan">GitHub</a>
         
